@@ -61,10 +61,10 @@ is what most commands require. */
 #define NUMERIC_ERROR(c) ((c) == ABORT ? OK : NOT_A_NUMBER)
 
 
-/* Do we want to wrap the next search? The logic to determine this needs to be
-   outside search.c */
+/* Do we want RepealLast to wrap on the next invocation? Upon NOT_FOUND from
+   search/replace functions, set this to 2. do_action() reduces toward 0.*/
 
-static int perform_wrap = 2;  /* counter to be decremented by do_action and set when NOT_FOUND */
+static int perform_wrap;
 
 
 /* This is the dispatcher of all actions that have some effect on the text.
@@ -108,7 +108,6 @@ int do_action(buffer *b, action a, int64_t c, char *p) {
 
 	if (b->recording) record_action(b->cur_macro, a, c, p, verbose_macros);
 
-	/* decrement the wrap counter */
 	if (perform_wrap > 0) perform_wrap--;
 
 	switch(a) {
@@ -896,16 +895,12 @@ int do_action(buffer *b, action a, int64_t c, char *p) {
 			free(b->find_string);
 			b->find_string = p;
 			b->find_string_changed = 1;
-			error = (a == FIND_A ? find : find_regexp)(b, NULL, false, false);
-			if (error == NOT_FOUND) {
-				perform_wrap = 2;
-				error = NOT_FOUND_WRAP_INSTRUCTIONS; /* we know that we didn't wrap, so put up the instructions */
-			}
-			print_error(error);
-
+			print_error(error = (a == FIND_A ? find : find_regexp)(b, NULL, false, false));
+			if (error == NOT_FOUND) perform_wrap = 2;
 			b->last_was_replace = 0;
 			b->last_was_regexp = (a == FINDREGEXP_A);
 		}
+
 		return error ? ERROR : 0;
 
 	case REPLACE_A:
@@ -1005,17 +1000,17 @@ int do_action(buffer *b, action a, int64_t c, char *p) {
 				if (a == REPLACEALL_A || c == 'A') end_undo_chain(b);
 
 				if (num_replace) {
-					snprintf(msg, MAX_MESSAGE_SIZE, "%" PRId64 " replacement%s made.", num_replace, num_replace > 1 ? "s" : "");
+					snprintf(msg, MAX_MESSAGE_SIZE, "%" PRId64 " replacement%s made.%s", num_replace, num_replace > 1 ? "s" : "", error == NOT_FOUND ? " (RepeatLast to wrap.)" :"");
 					print_message(msg);
 				}
 				if (stop) error = STOPPED;
 				if (error == STOPPED) reset_window();
 				if (error == NOT_FOUND) perform_wrap = 2;
+
 				if (error && ((c != 'A' && a != REPLACEALL_A || first_search) || error != NOT_FOUND)) {
 					print_error(error);
 					return ERROR;
 				}
-
 				return OK;
 			}
 		}
@@ -1040,8 +1035,7 @@ int do_action(buffer *b, action a, int64_t c, char *p) {
 		error = OK;
 		int64_t num_replace = 0;
 		start_undo_chain(b);
-
-		for (int64_t i = 0; i < c && !stop && !(error = (b->last_was_regexp ? find_regexp : find)(b, NULL, !b->last_was_replace, perform_wrap > 0)); i++)
+		for (int64_t i = 0; i < c && ! stop && ! (error = (b->last_was_regexp ? find_regexp : find)(b, NULL, !b->last_was_replace, perform_wrap > 0)); i++)
 			if (b->last_was_replace) {
 				const int64_t cur_char = b->cur_char;
 				const int cur_x = b->cur_x;
@@ -1069,17 +1063,13 @@ int do_action(buffer *b, action a, int64_t c, char *p) {
 
 		end_undo_chain(b);
 		if (num_replace) {
-			snprintf(msg, MAX_MESSAGE_SIZE, "%" PRId64 " replacement%s made.", num_replace, num_replace > 1 ? "s" : "");
+			snprintf(msg, MAX_MESSAGE_SIZE, "%" PRId64 " replacement%s made.%s", num_replace, num_replace > 1 ? "s" : "", error == NOT_FOUND ? " (RepeatLast to wrap.)" :"");
 			print_message(msg);
 		}
 		if (stop) error = STOPPED;
 		if (error == STOPPED) reset_window();
-		if (error == NOT_FOUND && perform_wrap == 0) {
-			perform_wrap = 2;
-			error = NOT_FOUND_WRAP_INSTRUCTIONS; /* we know that we didn't wrap, so put up the instructions */
-		}
-
-		return ! b->last_was_replace || error != NOT_FOUND ? error : 0;
+		if (error == NOT_FOUND) perform_wrap = 2;
+		return num_replace && error ? ERROR : error;
 
 	case MATCHBRACKET_A:
 		return print_error(match_bracket(b)) ? ERROR : 0;
