@@ -111,7 +111,6 @@ enum error {
 	/* 65 */ FILE_TOO_LARGE_SYNTAX_HIGHLIGHTING_DISABLED,
 	/* 66 */ CANNOT_SAVE_DISK_FULL,
 	/* 67 */ OUT_OF_MEMORY_DISK_FULL,
-	/* 68 */ NOT_FOUND_WRAP_INSTRUCTIONS,
 
 	ERROR_COUNT
 };
